@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,10 +33,9 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-final public class Executor {
+public final class Executor {
 
     Executor() {
     }
@@ -113,7 +112,10 @@ final public class Executor {
             pb.redirectOutput(ProcessBuilder.Redirect.DISCARD);
         }
 
-        Log.verbose(String.format("Running %s", createLogMessage(pb, true)));
+        if (!quietCommand) {
+            Log.verbose(String.format("Running %s", createLogMessage(pb, true)));
+        }
+
         Process p = pb.start();
 
         int code = 0;
@@ -148,7 +150,7 @@ final public class Executor {
 
                     if ((outputConsumer != null || Log.isVerbose())
                             || saveOutput) {
-                        savedOutput = br.lines().collect(Collectors.toList());
+                        savedOutput = br.lines().toList();
                     } else {
                         savedOutput = null;
                     }
@@ -182,7 +184,7 @@ final public class Executor {
                 code = p.waitFor();
             }
             if (!quietCommand) {
-                Log.verbose(pb.command(), getOutput(), code);
+                Log.verbose(pb.command(), getOutput(), code, IOUtils.getPID(p));
             }
             return code;
         } catch (InterruptedException ex) {
@@ -223,7 +225,7 @@ final public class Executor {
         return sb.toString();
     }
 
-    public final static int INFINITE_TIMEOUT = -1;
+    public static final int INFINITE_TIMEOUT = -1;
 
     private ProcessBuilder pb;
     private boolean saveOutput;
