@@ -27,7 +27,7 @@ package gc.stress.gcbasher;
 import java.io.IOException;
 
 /*
- * @test TestGCBasherWithShenandoah
+ * @test id=passive
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -46,7 +46,7 @@ import java.io.IOException;
  */
 
 /*
- * @test TestGCBasherWithShenandoah
+ * @test id=aggressive
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -69,7 +69,7 @@ import java.io.IOException;
  */
 
 /*
- * @test TestGCBasherWithShenandoah
+ * @test id=adaptive
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -87,7 +87,7 @@ import java.io.IOException;
  */
 
 /*
- * @test TestGCBasherDeoptWithShenandoah
+ * @test id=compact
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -100,48 +100,7 @@ import java.io.IOException;
  */
 
 /*
- * @test TestGCBasherWithShenandoah
- * @key stress
- * @library /
- * @requires vm.gc.Shenandoah
- * @requires vm.flavor == "server" & !vm.emulatedClient
- * @summary Stress the Shenandoah GC by trying to make old objects more likely to be garbage than young objects.
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu -XX:ShenandoahGCHeuristics=aggressive
- *      -XX:+ShenandoahOOMDuringEvacALot
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu -XX:ShenandoahGCHeuristics=aggressive
- *      -XX:+ShenandoahAllocFailureALot
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu -XX:ShenandoahGCHeuristics=aggressive
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- */
-
-/*
- * @test TestGCBasherWithShenandoah
- * @key stress
- * @library /
- * @requires vm.gc.Shenandoah
- * @requires vm.flavor == "server" & !vm.emulatedClient
- * @summary Stress the Shenandoah GC by trying to make old objects more likely to be garbage than young objects.
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu
- *      -XX:+ShenandoahVerify
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- */
-
-/*
- * @test TestGCBasherDeoptWithShenandoah
+ * @test id=passive-deopt-nmethod
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -162,7 +121,7 @@ import java.io.IOException;
  */
 
 /*
- * @test TestGCBasherDeoptWithShenandoah
+ * @test id=aggressive-deopt-nmethod
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -188,7 +147,7 @@ import java.io.IOException;
  */
 
 /*
- * @test TestGCBasherDeoptWithShenandoah
+ * @test id=adaptive-deopt-nmethod
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -208,7 +167,7 @@ import java.io.IOException;
  */
 
 /*
- * @test TestGCBasherDeoptWithShenandoah
+ * @test id=compact-deopt-nmethod
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -220,53 +179,6 @@ import java.io.IOException;
  *      -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
  *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
  */
-
-/*
- * @test TestGCBasherDeoptWithShenandoah
- * @key stress
- * @library /
- * @requires vm.gc.Shenandoah
- * @requires vm.flavor == "server" & !vm.emulatedClient & vm.opt.ClassUnloading != false
- * @summary Stress Shenandoah GC with nmethod barrier forced deoptimization enabled.
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu -XX:ShenandoahGCHeuristics=aggressive
- *      -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
- *      -XX:+ShenandoahOOMDuringEvacALot
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu -XX:ShenandoahGCHeuristics=aggressive
- *      -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
- *      -XX:+ShenandoahAllocFailureALot
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu -XX:ShenandoahGCHeuristics=aggressive
- *      -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- */
-
-/*
- * @test TestGCBasherDeoptWithShenandoah
- * @key stress
- * @library /
- * @requires vm.gc.Shenandoah
- * @requires vm.flavor == "server" & !vm.emulatedClient & vm.opt.ClassUnloading != false
- * @summary Stress Shenandoah GC with nmethod barrier forced deoptimization enabled.
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu
- *      -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
- *      -XX:+ShenandoahVerify
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- *
- * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu
- *      -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
- *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
- */
-
 
 public class TestGCBasherWithShenandoah {
     public static void main(String[] args) throws IOException {
