@@ -25,7 +25,7 @@
 package gc.stress.systemgc;
 
 /*
- * @test TestSystemGCWithShenandoah
+ * @test id=default
  * @key stress
  * @library /
  * @requires vm.gc.Shenandoah
@@ -39,20 +39,6 @@ package gc.stress.systemgc;
  * @run main/othervm/timeout=300 -Xlog:gc*=info -Xmx512m -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions
  *      -XX:+UseShenandoahGC
  *      gc.stress.systemgc.TestSystemGCWithShenandoah 270
- */
-
-/*
- * @test TestSystemGCWithShenandoah
- * @key stress
- * @library /
- * @requires vm.gc.Shenandoah
- * @summary Stress the Shenandoah GC full GC by allocating objects of different lifetimes concurrently with System.gc().
- *
- * @run main/othervm/timeout=300 -Xlog:gc*=info -Xmx512m -XX:+UnlockExperimentalVMOptions -XX:+UnlockDiagnosticVMOptions
- *      -XX:+UseShenandoahGC -XX:ShenandoahGCMode=iu
- *      -XX:+ShenandoahVerify
- *      gc.stress.systemgc.TestSystemGCWithShenandoah 270
- *
  */
 public class TestSystemGCWithShenandoah {
     public static void main(String[] args) throws Exception {
