@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2015, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -159,7 +157,7 @@ public class StressAllocationGCEvents {
         List<RecordedFrame> frames = stackTrace.getFrames();
         //String[] stacktrace = StackTraceHelper.buildStackTraceFromFrames(frames);
 
-        if (!(frames.get(0).getMethod().getName().equals(DIVER_FRAME_NAME))) {
+        if (!(frames.getFirst().getMethod().getName().equals(DIVER_FRAME_NAME))) {
             System.out.println("Skip stacktrace check for: \n"
                     + String.join("\n", threadName));
             return;
